testdata/baselines/reference/submodule/conformance/checkJsdocReturnTag1.errors.txt
returns.js(3,14): error TS8010: Type annotations can only be used in TypeScript files.
returns.js(10,14): error TS8010: Type annotations can only be used in TypeScript files.
returns.js(17,14): error TS8010: Type annotations can only be used in TypeScript files.
returns.js(20,12): error TS2872: This kind of expression is always truthy.


==== returns.js (4 errors) ====
    // @ts-check
    /**
     * @returns {string} This comment is not currently exposed
                 ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f() {
        return "hello";
    }
    
    /**
     * @returns {string=} This comment is not currently exposed
                 ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f1() {
        return "hello world";
    }
    
    /**
     * @returns {string|number} This comment is not currently exposed
                 ~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f2() {
        return 5 || "hello";
               ~
!!! error TS2872: This kind of expression is always truthy.
    }
    